--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.5",
         "react-transition-group": "^4.4.5",
+        "react-window": "^1.8.8",
         "recharts": "^2.2.0"
     },
     "devDependencies": {
