--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.5",
+        "react-swipeable-views": "^0.14.0",
         "react-transition-group": "^4.4.5",
         "react-window": "^1.8.8",
         "recharts": "^2.2.0"
@@ -33,6 +34,8 @@
         "@types/luxon": "^3.1.0",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
+        "@types/react-swipeable-views": "^0.13.1",
+        "@types/react-tabs": "^5.0.5",
         "@vitejs/plugin-react": "^3.0.0",
         "electron": "22.0.0",
         "electron-rebuild": "^3.2.9",
