--- a/package.json
+++ b/package.json
@@ -24,17 +24,20 @@
         "onoff": "^6.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.11.2",
+        "react-router-dom": "^6.4.5",
+        "react-swipeable-views": "^0.14.0",
         "react-transition-group": "^4.4.5",
         "react-window": "^1.8.8",
         "recharts": "^2.2.0"
     },
     "devDependencies": {
-        "@types/luxon": "^3.3.0",
-        "@types/react": "^18.2.7",
-        "@types/react-dom": "^18.2.4",
-        "@vitejs/plugin-react": "^4.0.0",
-        "electron": "25.0.0",
+        "@types/luxon": "^3.1.0",
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.9",
+        "@types/react-swipeable-views": "^0.13.1",
+        "@types/react-tabs": "^5.0.5",
+        "@vitejs/plugin-react": "^3.0.0",
+        "electron": "22.0.0",
         "electron-rebuild": "^3.2.9",
         "sass": "^1.62.1",
         "typescript": "^5.0.4",
