--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "Matthew Ernst",
     "license": "MIT",
     "dependencies": {
+        "@apollo/client": "^3.7.17",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.14.0",
@@ -19,6 +20,7 @@
         "axios": "^1.4.0",
         "clsx": "latest",
         "dotenv": "^16.3.1",
+        "graphql": "^16.7.1",
         "luxon": "^3.3.0",
         "nan": "^2.17.0",
         "onoff": "^6.0.3",
