--- a/package.json
+++ b/package.json
@@ -1,49 +1,42 @@
 {
-    "name": "garage-ui-mountain-edition",
-    "version": "2.1.2",
-    "description": "A Custom UI For Ski Resort Data",
-    "main": "dist/electron/main.js",
-    "scripts": {
-        "start": "vite",
-        "build": "vite build",
-        "garage": "npm run build && NODE_ENV=production electron ."
-    },
-    "author": "Matthew Ernst",
-    "license": "MIT",
-    "dependencies": {
-        "@apollo/client": "^3.8.8",
-        "@emotion/react": "^11.11.3",
-        "@emotion/styled": "^11.11.0",
-        "@mui/icons-material": "^5.15.2",
-        "@mui/lab": "^5.0.0-alpha.158",
-        "@mui/material": "^5.15.2",
-        "axios": "^1.6.3",
-        "clsx": "latest",
-        "dotenv": "^16.3.1",
-        "graphql": "^16.8.1",
-        "luxon": "^3.4.4",
-        "nan": "^2.18.0",
-        "onoff": "^6.0.3",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.21.1",
-        "react-transition-group": "^4.4.5",
-        "react-window": "^1.8.10",
-        "recharts": "^2.10.3"
-    },
-    "devDependencies": {
-        "@types/luxon": "^3.3.7",
-        "@types/react": "^18.2.45",
-        "@types/react-dom": "^18.2.18",
-        "@types/react-swipeable-views": "^0.13.5",
-        "@types/react-tabs": "^5.0.5",
-        "@vitejs/plugin-react": "^4.2.1",
-        "electron": "28.1.0",
-        "electron-rebuild": "^3.2.9",
-        "sass": "^1.69.5",
-        "typescript": "^5.3.3",
-        "vite": "^5.0.10",
-        "vite-plugin-electron": "0.15.5",
-        "vite-plugin-electron-renderer": "0.14.5"
-    }
+	"name": "garage-ui-mountain-edition",
+	"version": "2.1.2",
+	"description": "A Custom UI For Ski Resort Data",
+	"main": "dist/electron/main.js",
+	"scripts": {
+		"start": "vite",
+		"build": "tsc && vite build",
+		"garage": "npm run build && NODE_ENV=production electron ."
+	},
+	"author": "Matthew Ernst",
+	"license": "MIT",
+	"dependencies": {
+		"@apollo/client": "^3.8.8",
+		"@emotion/react": "^11.11.3",
+		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.15.2",
+		"@mui/lab": "^5.0.0-alpha.158",
+		"@mui/material": "^5.15.2",
+		"axios": "^1.6.3",
+		"luxon": "^3.4.4",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.21.1",
+		"react-transition-group": "^4.4.5",
+		"react-window": "^1.8.10",
+		"recharts": "^2.10.3"
+	},
+	"devDependencies": {
+		"@types/luxon": "^3.3.7",
+		"@types/react": "^18.2.45",
+		"@types/react-dom": "^18.2.18",
+		"@vitejs/plugin-react": "^4.2.1",
+		"electron": "28.1.0",
+		"electron-rebuild": "^3.2.9",
+		"sass": "^1.69.5",
+		"typescript": "^5.3.3",
+		"vite": "^5.0.10",
+		"vite-plugin-electron": "0.15.5",
+		"vite-plugin-electron-renderer": "0.14.5"
+	}
 }
